Reorganização dos packages do projeto